postgresql/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service  `
  namespace: my-namespace
spec:
  selector:
    app: postgres # label of pod
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432 # port of pod
